<resources>
    <string name="app_name">WSQLiteCrudCrisnaCurinao</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="nombre">Nombre: </string>
    <string name="apellido">Apellido: </string>
    <string name="email">Email: </string>
    <string name="telefono">Telefono: </string>
    <string name="ciudad">Ciudad: </string>
</resources>