<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    
    <TextView
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="200dp"
        android:layout_height="186dp"
        android:background="@drawable/exit"/>


</LinearLayout>